--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "redis": "^5.5.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
