--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-image-crop": "^11.0.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8"
   },
