--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
+    "react-is": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.3.0",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8"
