--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^5.5.6",
+    "streamifier": "^0.1.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
+    "@types/streamifier": "^0.1.2",
     "@types/ws": "^8.18.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
