--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/socket.io-client": "^1.4.36",
     "@types/uuid": "^10.0.0",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
