--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,13 +1,3 @@
 node_modules
 .env
-src/testGemini.js
-src/listModels.js
-src/test-quiz-cache.js
-src/test-mocktrials-cache.js
-src/perfMetrics.js
-src/rate-limiter.js
-src/test-lawyers-api.js
-src/generateSignature.js
-inspect_appointments.ts
-src/test-race-condition.ts
-src/migrate-index.ts
+src/scripts/
